branches/wip/Archive/de19e88cf713a3d3cf6430d5c4cc6d3a-e223fd4a885a77b520bbfe69dda8fb91/output
+ clang++ -std=c++11 main.cpp
main.cpp:26:5: error: no matching function for call to 'memset_if_pod_else_error'
    memset(&np, 0, sizeof(np));
    ^~~~~~
main.cpp:7:16: note: expanded from macro 'memset'
#define memset memset_if_pod_else_error
               ^~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:10:89: note: candidate template ignored: disabled by 'enable_if' [with T = nonpod]
auto memset_if_pod_else_error(T *data, int ch, size_t count) -> typename std::enable_if<std::is_pod<T>::value, void*>::type
                                                                                        ^
1 error generated.
